# tiresias

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: App.cpp  App.h  Shader.cpp  Shader.h  main.cpp
src/glsl/: fragment.frag  notransform.vert  spectral.frag  vertex.vert
src/image_format/: artraw.cpp  artraw.h
src/image_viewer/: ImageViewer.cpp  ImageViewer.h  ImageViewerLDR.cpp  ImageViewerLDR.h  ImageViewerSpectral.cpp  ImageViewerSpectral.h  ImageViewerSpectralEXR.cpp  ImageViewerSpectralEXR.h
